remix-jokes-pipeline/ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: el-remix-jokes-el-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`/el-remix-jokes-el`)
      services:
        - name: el-remix-jokes-el
          port: 8080
          namespace: tekton-argocd-example
  tls:
    secretName: stiforr-com-tls
